--- a/home/build.gradle
+++ b/home/build.gradle
@@ -13,7 +13,7 @@ tasks.withType(JavaCompile) {
 // 프로젝트에서 사용할 라이브러리 설정
 // => 라이브러리 정보는 mvnrepository.com에서 검색하여 가져온다.
 dependencies {
-    // Servlet API 라이브러리
+   // Servlet API 라이브러리
     providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
     
     // JSTL 구현 라이브러리
@@ -25,6 +25,22 @@ dependencies {
     // Spring IoC 컨테이너 관련 라이브러리
     // => Spring WebMVC를 추가하면 context 라이브러리는 자동으로 추가된다. 
     //compile group: 'org.springframework', name: 'spring-context', version: '5.1.1.RELEASE'
+    
+    
+    // mariadb jdbc driver 
+    compile group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.3.0'
+    
+    // mybatis 라이브러리
+    compile group: 'org.mybatis', name: 'mybatis', version: '3.4.6'
+    
+    // mybatis spring 연동 라이브러리
+    compile group: 'org.mybatis', name: 'mybatis-spring', version: '1.3.2'
+    
+    // mybatis-spring 라이브러리를 지원해주는 스프링 라이브러리
+    compile group: 'org.springframework', name: 'spring-jdbc', version: '5.1.1.RELEASE'
+
+    // Apache Common DBCP 라이브러리
+    compile group: 'commons-dbcp', name: 'commons-dbcp', version: '1.4'
     
     compile 'com.google.guava:guava:23.0'
     testCompile 'junit:junit:4.12'
