--- a/home/build.gradle
+++ b/home/build.gradle
@@ -10,43 +10,43 @@ tasks.withType(JavaCompile) {
     targetCompatibility = '1.8'
 }
 
-// ÇÁ·ÎÁ§Æ®¿¡¼­ »ç¿ëÇÒ ¶óÀÌºê·¯¸® ¼³Á¤
-// => ¶óÀÌºê·¯¸® Á¤º¸´Â mvnrepository.com¿¡¼­ °Ë»öÇÏ¿© °¡Á®¿Â´Ù.
+// í”„ë¡œì íŠ¸ì—ì„œ ì‚¬ìš©í•  ë¼ì´ë¸ŒëŸ¬ë¦¬ ì„¤ì •
+// => ë¼ì´ë¸ŒëŸ¬ë¦¬ ì •ë³´ëŠ” mvnrepositoy.com ì—ì„œ ê²€ìƒ‰í•˜ì—¬ ê°€ì €ì˜¨ë‹¤
 dependencies {
-   // Servlet API ¶óÀÌºê·¯¸®
+   // Servlet API ë¼ì´ë¸ŒëŸ¬ë¦¬
     providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
     
-    // JSTL ±¸Çö ¶óÀÌºê·¯¸®
+    // JSTL ï¿½ï¿½ï¿½ï¿½ ë¼ì´ë¸ŒëŸ¬ë¦¬
     compile group: 'javax.servlet', name: 'jstl', version: '1.2'
     
-    // Spring WebMVC ¶óÀÌºê·¯¸®
+    // Spring WebMVC ë¼ì´ë¸ŒëŸ¬ë¦¬
     compile group: 'org.springframework', name: 'spring-webmvc', version: '5.1.1.RELEASE'
     
-    // Spring IoC ÄÁÅ×ÀÌ³Ê °ü·Ã ¶óÀÌºê·¯¸®
-    // => Spring WebMVC¸¦ Ãß°¡ÇÏ¸é context ¶óÀÌºê·¯¸®´Â ÀÚµ¿À¸·Î Ãß°¡µÈ´Ù. 
+    // Spring IoC ì»¨í…Œì´ë„ˆ ê´€ë ¨ ë¼ì´ë¸ŒëŸ¬ë¦¬
+    // => Spring WebMVCë¥´ ì¶”ê°€í•˜ë©´ context ë¼ì´ë¸ŒëŸ¬ë¦¬ëŠ” ìë™ìœ¼ë¡œ ì¶”ê°€ëœë‹¤
     //compile group: 'org.springframework', name: 'spring-context', version: '5.1.1.RELEASE'
     
     
     // mariadb jdbc driver 
     compile group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.3.0'
     
-    // mybatis ¶óÀÌºê·¯¸®
+    // mybatis ë¼ì´ë¸ŒëŸ¬ë¦¬
     compile group: 'org.mybatis', name: 'mybatis', version: '3.4.6'
     
-    // mybatis spring ¿¬µ¿ ¶óÀÌºê·¯¸®
+    // mybatis spring ì—°ë™ ë¼ì´ë¸ŒëŸ¬ë¦¬
     compile group: 'org.mybatis', name: 'mybatis-spring', version: '1.3.2'
     
-    // mybatis-spring ¶óÀÌºê·¯¸®¸¦ Áö¿øÇØÁÖ´Â ½ºÇÁ¸µ ¶óÀÌºê·¯¸®
+    // mybatis-spring ë¼ì´ë¸ŒëŸ¬ë¦¬ë¥¼ ì§€ìš°ë„ˆí•´ì£¼ëŠ” ìŠ¤í”„ë§ ë¼ì´ë¸ŒëŸ¬ë¦¬
     compile group: 'org.springframework', name: 'spring-jdbc', version: '5.1.1.RELEASE'
 
-    // Apache Common DBCP ¶óÀÌºê·¯¸®
+    // Apache Common DBCP ë¼ì´ë¸ŒëŸ¬ë¦¬
     compile group: 'commons-dbcp', name: 'commons-dbcp', version: '1.4'
     
     compile 'com.google.guava:guava:23.0'
     testCompile 'junit:junit:4.12'
 }
 
-// ¶óÀÌºê·¯¸®¸¦ ´Ù¿î·Îµå ¹Ş´Â ¼­¹ö ¼³Á¤
+// ë¼ì´ë¸ŒëŸ¬ë¦¬ë¥¼ ë‹¤ìš´ë¡œë“œ ë°›ëŠ” ì„œë²„ ì„¤ì •
 repositories {
     mavenCentral() //https://repo.maven.apache.org/maven2/
 }
