--- a/home/build.gradle
+++ b/home/build.gradle
@@ -10,43 +10,49 @@ tasks.withType(JavaCompile) {
     targetCompatibility = '1.8'
 }
 
-// ÇÁ·ÎÁ§Æ®¿¡¼­ »ç¿ëÇÒ ¶óÀÌºê·¯¸® ¼³Á¤
-// => ¶óÀÌºê·¯¸® Á¤º¸´Â mvnrepository.com¿¡¼­ °Ë»öÇÏ¿© °¡Á®¿Â´Ù.
+// ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Æ®ï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½Ìºê·¯ï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½
+// => ï¿½ï¿½ï¿½Ìºê·¯ï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ mvnrepository.comï¿½ï¿½ï¿½ï¿½ ï¿½Ë»ï¿½ï¿½Ï¿ï¿½ ï¿½ï¿½ï¿½ï¿½ï¿½Â´ï¿½.
 dependencies {
-   // Servlet API ¶óÀÌºê·¯¸®
+   // Servlet API ï¿½ï¿½ï¿½Ìºê·¯ï¿½ï¿½
     providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
     
-    // JSTL ±¸Çö ¶óÀÌºê·¯¸®
+    // JSTL ï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½Ìºê·¯ï¿½ï¿½
     compile group: 'javax.servlet', name: 'jstl', version: '1.2'
     
-    // Spring WebMVC ¶óÀÌºê·¯¸®
+    // Spring WebMVC ï¿½ï¿½ï¿½Ìºê·¯ï¿½ï¿½
     compile group: 'org.springframework', name: 'spring-webmvc', version: '5.1.1.RELEASE'
     
-    // Spring IoC ÄÁÅ×ÀÌ³Ê °ü·Ã ¶óÀÌºê·¯¸®
-    // => Spring WebMVC¸¦ Ãß°¡ÇÏ¸é context ¶óÀÌºê·¯¸®´Â ÀÚµ¿À¸·Î Ãß°¡µÈ´Ù. 
+    // Spring IoC ï¿½ï¿½ï¿½ï¿½ï¿½Ì³ï¿½ ï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½Ìºê·¯ï¿½ï¿½
+    // => Spring WebMVCï¿½ï¿½ ï¿½ß°ï¿½ï¿½Ï¸ï¿½ context ï¿½ï¿½ï¿½Ìºê·¯ï¿½ï¿½ï¿½ï¿½ ï¿½Úµï¿½ï¿½ï¿½ï¿½ï¿½ ï¿½ß°ï¿½ï¿½È´ï¿½. 
     //compile group: 'org.springframework', name: 'spring-context', version: '5.1.1.RELEASE'
     
     
     // mariadb jdbc driver 
     compile group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.3.0'
     
-    // mybatis ¶óÀÌºê·¯¸®
+    // mybatis ï¿½ï¿½ï¿½Ìºê·¯ï¿½ï¿½
     compile group: 'org.mybatis', name: 'mybatis', version: '3.4.6'
     
-    // mybatis spring ¿¬µ¿ ¶óÀÌºê·¯¸®
+    // mybatis spring ï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½Ìºê·¯ï¿½ï¿½
     compile group: 'org.mybatis', name: 'mybatis-spring', version: '1.3.2'
     
-    // mybatis-spring ¶óÀÌºê·¯¸®¸¦ Áö¿øÇØÁÖ´Â ½ºÇÁ¸µ ¶óÀÌºê·¯¸®
+    // mybatis-spring ï¿½ï¿½ï¿½Ìºê·¯ï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ö´ï¿½ ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½Ìºê·¯ï¿½ï¿½
     compile group: 'org.springframework', name: 'spring-jdbc', version: '5.1.1.RELEASE'
 
-    // Apache Common DBCP ¶óÀÌºê·¯¸®
+    // Apache Common DBCP ï¿½ï¿½ï¿½Ìºê·¯ï¿½ï¿½
     compile group: 'commons-dbcp', name: 'commons-dbcp', version: '1.4'
+    
+    //json
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+    
+    // ì¹´ì¹´ë¡œ ë¡œê·¸ì¸
     
     compile 'com.google.guava:guava:23.0'
     testCompile 'junit:junit:4.12'
 }
 
-// ¶óÀÌºê·¯¸®¸¦ ´Ù¿î·Îµå ¹Ş´Â ¼­¹ö ¼³Á¤
+// ï¿½ï¿½ï¿½Ìºê·¯ï¿½ï¿½ï¿½ï¿½ ï¿½Ù¿ï¿½Îµï¿½ ï¿½Ş´ï¿½ ï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½
 repositories {
     mavenCentral() //https://repo.maven.apache.org/maven2/
+    
 }
